# fuse-health

./: .gitignore  LICENSE.txt
backend/: .gitignore  README.md  client.py  mcp-config.json  pyproject.toml  schema.prisma  server.py
backend/docs/: fastmcp-full.md
backend/src/app/: __init__.py  config.py  main.py
backend/src/app/controllers/: __init__.py  chat_controller.py  mcp_configuration_controller.py  task_controller.py
backend/src/app/models/: __init__.py  chat.py  mcp.py
backend/src/app/services/: __init__.py  database.py  error_handling.py  mcp_configuration_service.py  mcp_service.py
backend/src/app/views/: __init__.py  chat_routes.py  health_routes.py  mcp_configuration_routes.py
backend/src/medical_mcps/: pubmed_server.py
backend/src/server/: __init__.py  main.py  models.py  task_server.py
backend/src/servers/: __init__.py  dicom_server.py  epic_server.py  gmail_server.py  pubmed_server.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/about/: page.tsx
frontend/app/api/: page.tsx
frontend/app/assistant/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/workflows/: page.tsx
frontend/components/: Navbar.tsx
frontend/components/dashboard/: McpServerOverviewCard.tsx  sidebar-nav.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  separator.tsx
frontend/lib/: config.ts  utils.ts
frontend/lib/api/: endpoints.ts  index.ts  queries.ts  types.ts
scripts/: start-stack.sh
(+4 files in other folders)
